RESOLVED FIXED Bug 142064
The bool returning form of BytecodeGenerator::addVar() can be removed
https://bugs.webkit.org/show_bug.cgi?id=142064
Summary The bool returning form of BytecodeGenerator::addVar() can be removed
Filip Pizlo
Reported 2015-02-26 16:46:22 PST
Patch forthcoming.
Attachments
the patch (3.72 KB, patch)
2015-02-26 16:51 PST, Filip Pizlo
mark.lam: review+
patch for commit of assertion failure fix. (1.42 KB, patch)
2015-02-26 18:05 PST, Mark Lam
no flags
Filip Pizlo
Comment 1 2015-02-26 16:51:14 PST
Created attachment 247467 [details] the patch
WebKit Commit Bot
Comment 2 2015-02-26 16:52:21 PST
Attachment 247467 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.h:616: The parameter name "ident" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.h:616: The parameter name "constantMode" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/bytecompiler/BytecodeGenerator.h:616: The parameter name "watchMode" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 3 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3 2015-02-26 16:52:54 PST
Comment on attachment 247467 [details] the patch r=me
Filip Pizlo
Comment 4 2015-02-26 16:55:59 PST
Brent Fulgham
Comment 5 2015-02-26 17:12:24 PST
This may have caused a bunch of Debug assertions Windows. I'm trying to debug locally.
WebKit Commit Bot
Comment 6 2015-02-26 17:58:52 PST
Re-opened since this is blocked by bug 142067
Mark Lam
Comment 7 2015-02-26 18:05:44 PST
Created attachment 247478 [details] patch for commit of assertion failure fix.
Mark Lam
Comment 8 2015-02-26 18:08:42 PST
Fix for assertion failure landed in r180719: <http://trac.webkit.org/r180719>.
Filip Pizlo
Comment 9 2015-02-26 18:28:29 PST
(In reply to comment #8) > Fix for assertion failure landed in r180719: > <http://trac.webkit.org/r180719>. Thanks!
Note You need to log in before you can comment on or make changes to this bug.