The bool returning form of BytecodeGenerator::addVar() can be removed https://bugs.webkit.org/show_bug.cgi?id=142064

Reviewed by Mark Lam.

It's easier to implement addVar() when you don't have to return whether it's a new
variable or not.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::addVar):
* bytecompiler/BytecodeGenerator.h:
(JSC::BytecodeGenerator::addVar): Deleted.



Canonical link: https://commits.webkit.org/160110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180711 268f45cc-cd09-0410-ab3c-d52691b4dbfc